[Silver III] Title: 프린터 큐, Time: 160 ms, Memory: 14856 KB -BaekjoonHub